[tool.poetry]
name = "hb"
version = "1.4.3"
description = "A simple command-line utility for calculating checksums."
license = "MIT"
authors = ["Ching Chow <ching.chow.sc@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/chingc/Hash-Brown"
repository = "https://github.com/chingc/Hash-Brown"
documentation = "https://github.com/chingc/Hash-Brown"
keywords = ["checksum", "digest", "hash", "md5", "sha1"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
hb = "hb.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
colorama = "^0.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.670.0"
pylint = "^2.0"
pytest = "^4.0"
pytest-cov = "^2.6"
pytest-mock = "^1.10"
pytest-xdist = "^1.26"
rope = "^0.12.0"
