[tool.poetry]
name = "hb"
version = "2.0.0"
description = "A simple utility for calculating hashes and checksums."
authors = ["Ching Chow <bright.water2722@fastmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chingc/Hash-Brown"
repository = "https://github.com/chingc/Hash-Brown"
documentation = "https://github.com/chingc/Hash-Brown"
keywords = ["checksum", "digest", "hash", "md5", "sha1"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pylint = "^2.15.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
