[tool.poetry]
name = "hb"
version = "2.0.0"
description = "A convenient interface for hashlib and zlib."
authors = ["Ching Chow <bright.water2722@fastmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chingc/Hash-Brown"
repository = "https://github.com/chingc/Hash-Brown"
documentation = "https://github.com/chingc/Hash-Brown"
keywords = ["checksum", "digest", "hashlib", "zlib", "crc32", "md5", "sha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-subtests = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
